--- a/base/pom.xml
+++ b/base/pom.xml
@@ -1,109 +1,129 @@
 <project>
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.ozonehis</groupId>
+  <artifactId>ozone-cambodia</artifactId>
+  <name>Ozone for Cambodia</name>
+  <version>1.5.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
+
+  <parent>
     <groupId>com.ozonehis</groupId>
-    <artifactId>ozone-distro-cambodia</artifactId>
-    <name>Ozone Distribution for Cambodia</name>
+    <artifactId>ozone-cambodia-parent</artifactId>
     <version>1.5.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+  </parent>
 
-    <parent>
-        <groupId>com.ozonehis</groupId>
-        <artifactId>ozone-distro-cambodia-parent</artifactId>
-        <version>1.5.0-SNAPSHOT</version>
-    </parent>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
-    <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-   
-    <build>
-      <plugins>
-        <!-- Copy the Ozone Distro resources -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>2.8</version>
-          <executions>
-            <execution>
-              <id>Unpack Ozone Distro</id>
-              <phase>generate-resources</phase>
-              <goals>
-                <goal>unpack-dependencies</goal>
-              </goals>
-              <configuration>
-                <excludeTransitive>true</excludeTransitive>
-                <useBaseVersion>true</useBaseVersion>
-                <outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}</outputDirectory>
-                <includeArtifactIds>ozone-distro</includeArtifactIds>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <!-- Exclude resource files as speficied in dependency-excludes.txt -->
-        <plugin>
-          <artifactId>exec-maven-plugin</artifactId>
-          <version>3.1.0</version>
-          <groupId>org.codehaus.mojo</groupId>
-          <executions>
-            <execution>
-              <id>Run exclude-files.sh</id>
-              <phase>generate-resources</phase>
-              <goals>
-                <goal>exec</goal>
-              </goals>
-              <configuration>
-                <executable>${project.parent.basedir}/exclude-files.sh</executable>
-                <commandlineArgs>${project.basedir}/dependency-excludes.txt
-                  ${project.build.directory}/${project.artifactId}-${project.version}</commandlineArgs>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.3.0</version>
-          <executions>
-            <execution>
-              <!-- Override with local files into the target folder -->
-              <id>Copy local resources</id>
-              <phase>process-resources</phase>
-              <goals>
-                <goal>copy-resources</goal>
-              </goals>
-              <configuration>
-                <outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}</outputDirectory>
-                <overwrite>true</overwrite>
-                <resources>
-                  <resource>
-                    <directory>${project.parent.basedir}/configs</directory>
-                  </resource>
-                </resources>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <!-- Packaging the distro as a installable/deployable file -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>Package distro</id>
-              <phase>package</phase>
-              <goals>
-                <goal>single</goal>
-              </goals>
-              <configuration>
-                <appendAssemblyId>false</appendAssemblyId>
-                <descriptors>
-                  <descriptor>${project.basedir}/assembly.xml</descriptor>
-                </descriptors>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </build>
-  </project>
+  <dependencies>
+    <dependency>
+      <groupId>com.ozonehis</groupId>
+      <artifactId>ozone</artifactId>
+      <type>zip</type>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <!-- Copy the Ozone resources in a temporary folder -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.8</version>
+        <executions>
+          <execution>
+            <id>Unpack Ozone</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>unpack-dependencies</goal>
+            </goals>
+            <configuration>
+              <excludeTransitive>true</excludeTransitive>
+              <useBaseVersion>true</useBaseVersion>
+              <outputDirectory>${project.build.directory}/ozone</outputDirectory>
+              <includeArtifactIds>ozone</includeArtifactIds>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.3.0</version>
+        <executions>
+          <execution>
+            <!-- Override with local config files-->
+            <id>Copy local resources</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>
+                ${project.build.directory}/${project.artifactId}-${project.version}/distro/configs</outputDirectory>
+              <overwrite>true</overwrite>
+              <resources>
+                <resource>
+                  <directory>${project.parent.basedir}/configs</directory>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+          <execution>
+            <!-- Exclude files from Ozone -->
+            <id>Exclude some Ozone files</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>
+                ${project.build.directory}/${project.artifactId}-${project.version}</outputDirectory>
+              <overwrite>true</overwrite>
+              <resources>
+                <resource>
+                  <directory>${project.build.directory}/ozone</directory>
+                  <excludes>
+                    <exclude>distro/**/appointment*</exclude>
+                    <exclude>distro/**/concepts*demo.csv</exclude>
+                    <exclude>distro/**/encountertypes*demo.csv</exclude>
+                    <exclude>distro/**/personattributetypes*demo.csv</exclude>
+                    <exclude>distro/**/privileges*demo.csv</exclude>
+                    <exclude>distro/**/program*</exclude>
+                    <exclude>distro/**/roles*demo.csv</exclude>
+                    <exclude>distro/**/ampathforms.json</exclude>
+                    <exclude>distro/**/ampathformstranslations.json</exclude>
+                    <exclude>distro/**/demo.csv</exclude>
+                  </excludes>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- Packaging the package as a zip -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>Package distro</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <configuration>
+              <appendAssemblyId>false</appendAssemblyId>
+              <descriptors>
+                <descriptor>${project.basedir}/assembly.xml</descriptor>
+              </descriptors>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+</project>
   
