--- a/prod/pom.xml
+++ b/prod/pom.xml
@@ -1,150 +1,130 @@
 <project>
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.ozonehis</groupId>
+  <artifactId>ozone-cambodia-prod</artifactId>
+  <name>Ozone for Cambodia - Production</name>
+  <version>1.5.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
+
+  <organization>
+    <name>Ozone HIS</name>
+    <url>http://www.ozone-his.com</url>
+  </organization>
+
+  <developers>
+    <developer>
+      <name>Mekom Solutions</name>
+      <url>http://www.mekomsolutions.com</url>
+    </developer>
+  </developers>
+
+  <parent>
     <groupId>com.ozonehis</groupId>
-    <artifactId>ozone-distro-cambodia-prod</artifactId>
-    <name>Ozone Distribution for Cambodia - Production</name>
+    <artifactId>ozone-cambodia-parent</artifactId>
     <version>1.5.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+  </parent>
 
-    <organization>
-        <name>Ozone HIS</name>
-        <url>http://www.ozone-his.com</url>
-    </organization>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
-    <developers>
-        <developer>
-            <name>Mekom Solutions</name>
-            <url>http://www.mekomsolutions.com</url>
-        </developer>
-    </developers>
-    
-    <parent>
-        <groupId>com.ozonehis</groupId>
-        <artifactId>ozone-distro-cambodia-parent</artifactId>
-        <version>1.5.0-SNAPSHOT</version>
-    </parent>
+  <dependencies>
+    <dependency>
+      <groupId>com.ozonehis</groupId>
+      <artifactId>ozone-cambodia</artifactId>
+      <version>1.5.0-SNAPSHOT</version>
+      <type>zip</type>
+    </dependency>
+    <dependency>
+      <groupId>com.ozonehis</groupId>
+      <artifactId>ozone-config-cambodia0</artifactId>
+      <type>zip</type>
+      <version>1.5.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.8</version>
+        <executions>
+          <!-- Copy the non-prod artifact -->
+          <execution>
+            <id>Prod: Copy Oz Kh non-prod</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>unpack-dependencies</goal>
+            </goals>
+            <configuration>
+              <excludeTransitive>true</excludeTransitive>
+              <useBaseVersion>true</useBaseVersion>
+              <outputDirectory>
+                ${project.build.directory}/${project.artifactId}-${project.version}</outputDirectory>
+              <includeArtifactIds>ozone-cambodia</includeArtifactIds>
+            </configuration>
+          </execution>
+          <!-- Copy the confidential configs -->
+          <execution>
+            <id>Prod: Copy Ozone Config Cambodia 0</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>unpack-dependencies</goal>
+            </goals>
+            <configuration>
+              <excludeTransitive>true</excludeTransitive>
+              <useBaseVersion>true</useBaseVersion>
+              <outputDirectory>
+                ${project.build.directory}/${project.artifactId}-${project.version}/distro</outputDirectory>
+              <includeArtifactIds>ozone-config-cambodia0</includeArtifactIds>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>Prod: Package the production distro</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <configuration>
+              <appendAssemblyId>false</appendAssemblyId>
+              <descriptors>
+                <descriptor>assembly.xml</descriptor>
+              </descriptors>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.ozonehis</groupId>
-            <artifactId>ozone-distro-cambodia</artifactId>
-            <version>1.5.0-SNAPSHOT</version>
-            <type>zip</type>
-        </dependency>
-        <dependency>
-            <groupId>com.ozonehis</groupId>
-            <artifactId>ozone-config-cambodia0</artifactId>
-            <type>zip</type>
-            <version>1.5.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.8</version>
-                <executions>
-                    <!-- Copy the non-prod artifact -->
-                    <execution>
-                        <id>Prod: Copy Oz Kh non-prod</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>unpack-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <excludeTransitive>true</excludeTransitive>
-                            <useBaseVersion>true</useBaseVersion>
-                            <outputDirectory>
-                                ${project.build.directory}/${project.artifactId}-${project.version}</outputDirectory>
-                            <includeArtifactIds>ozone-distro-cambodia</includeArtifactIds>
-                        </configuration>
-                    </execution>
-                    <!-- Copy the confidential configs -->
-                    <execution>
-                        <id>Prod: Copy Ozone Config Cambodia 0</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>unpack-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <excludeTransitive>true</excludeTransitive>
-                            <useBaseVersion>true</useBaseVersion>
-                            <outputDirectory>
-                                ${project.build.directory}/${project.artifactId}-${project.version}</outputDirectory>
-                            <includeArtifactIds>ozone-config-cambodia0</includeArtifactIds>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- Exclude resource files as speficied in dependency-excludes-prod.txt -->
-            <plugin>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
-                <groupId>org.codehaus.mojo</groupId>
-                <executions>
-                    <execution>
-                        <id>Prod: Run 'prod' exclude-files.sh</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>${project.parent.basedir}/exclude-files.sh</executable>
-                            <commandlineArgs>
-                                ${project.basedir}/dependency-excludes.txt
-                                ${project.build.directory}/${project.artifactId}-${project.version}</commandlineArgs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>Prod: Package the production distro</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <appendAssemblyId>false</appendAssemblyId>
-                            <descriptors>
-                                <descriptor>assembly.xml</descriptor>
-                            </descriptors>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+  <repositories>
+    <repository>
+      <id>mks-nexus-private</id>
+      <url>https://nexus.mekomsolutions.net/repository/maven-private/</url>
+    </repository>
+    <repository>
+      <id>mks-nexus-public</id>
+      <url>https://nexus.mekomsolutions.net/repository/maven-public/</url>
+    </repository>
+  </repositories>
 
-    <repositories>
-        <repository>
-            <id>mks-nexus-private</id>
-            <url>https://nexus.mekomsolutions.net/repository/maven-private/</url>
-        </repository>
-        <repository>
-            <id>mks-nexus-public</id>
-            <url>https://nexus.mekomsolutions.net/repository/maven-public/</url>
-        </repository>
-    </repositories>
-
-    <distributionManagement>
-        <repository>
-            <name>Mekom SolutionsNexus private repo for releases</name>
-            <id>mks-nexus-private</id>
-            <url>https://nexus.mekomsolutions.net/repository/maven-private-releases/</url>
-        </repository>
-        <snapshotRepository>
-            <name>Mekom Solutions Nexus private repo for snapshots</name>
-            <id>mks-nexus-private-snapshots</id>
-            <url>https://nexus.mekomsolutions.net/repository/maven-private-snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+  <distributionManagement>
+    <repository>
+      <name>Mekom SolutionsNexus private repo for releases</name>
+      <id>mks-nexus-private</id>
+      <url>https://nexus.mekomsolutions.net/repository/maven-private-releases/</url>
+    </repository>
+    <snapshotRepository>
+      <name>Mekom Solutions Nexus private repo for snapshots</name>
+      <id>mks-nexus-private-snapshots</id>
+      <url>https://nexus.mekomsolutions.net/repository/maven-private-snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
