--- a/base/pom.xml
+++ b/base/pom.xml
@@ -41,6 +41,12 @@
       <type>zip</type>
     </dependency>
 
+    <dependency>
+      <groupId>com.ozonehis</groupId>
+      <artifactId>analytics-queries</artifactId>
+      <version>1.1.0-SNAPSHOT</version>
+      <type>zip</type>
+    </dependency>
   </dependencies>
 
   <build>
@@ -129,6 +135,28 @@
           </execution>
 
         </executions>
+      </plugin>
+
+      <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-dependency-plugin</artifactId>
+      <version>2.8</version>
+      <executions>
+      <!-- Copy Ozone Analytics queries -->
+      <execution>
+        <id>Ozone Analytics queries</id>
+        <phase>prepare-package</phase>
+        <goals>
+          <goal>unpack-dependencies</goal>
+        </goals>
+        <configuration>
+          <excludeTransitive>true</excludeTransitive>
+          <outputDirectory>
+            ${project.build.directory}/${project.artifactId}-${project.version}/distro/analytics/</outputDirectory>
+          <includeArtifactIds>analytics-queries</includeArtifactIds>
+        </configuration>
+      </execution>
+      </executions>
       </plugin>
 
       <!-- Compile a dependency report -->
