--- a/base/pom.xml
+++ b/base/pom.xml
@@ -105,7 +105,7 @@
           </execution>
 
           <execution>
-            <!-- Overide the inherited Maven Parent plugin execution to exlude Superset configs -->
+            <!-- Override the inherited Maven Parent plugin execution to exclude Superset configs -->
             <!-- Override with local config files -->
             <id>Copy local resources</id>
             <phase>process-resources</phase>
