--- a/base/pom.xml
+++ b/base/pom.xml
@@ -21,7 +21,10 @@
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
 
+    <analyticsQueriesVersion>1.1.0-SNAPSHOT</analyticsQueriesVersion>
+
     <supersetConfigsArtifactId>ozone-cambodia-superset-configs</supersetConfigsArtifactId>
+    <analyticQueriesArtifactId>analytics-queries</analyticQueriesArtifactId>
 
     <!-- Classifier for the dependency report artifact -->
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
@@ -43,8 +46,8 @@
 
     <dependency>
       <groupId>com.ozonehis</groupId>
-      <artifactId>analytics-queries</artifactId>
-      <version>1.1.0-SNAPSHOT</version>
+      <artifactId>${analyticQueriesArtifactId}</artifactId>
+      <version>${analyticsQueriesVersion}</version>
       <type>zip</type>
     </dependency>
   </dependencies>
@@ -56,6 +59,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <executions>
+          <!-- Unpack Ozone Cambodia Superset configs -->
           <execution>
             <id>Unpack Cambodia Superset configs sub-module</id>
             <phase>generate-resources</phase>
@@ -65,8 +69,22 @@
             <configuration>
               <excludeTransitive>true</excludeTransitive>
               <outputDirectory>
-                ${project.build.directory}/${project.artifactId}-${project.version}/configs/superset</outputDirectory>
+                ${project.build.directory}/${project.artifactId}-${project.version}/distro/configs/superset</outputDirectory>
               <includeArtifactIds>${supersetConfigsArtifactId}</includeArtifactIds>
+            </configuration>
+          </execution>
+          <!-- Copy Ozone Analytics queries -->
+          <execution>
+            <id>Ozone Analytics queries</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>unpack-dependencies</goal>
+            </goals>
+            <configuration>
+              <excludeTransitive>true</excludeTransitive>
+              <outputDirectory>
+                ${project.build.directory}/${project.artifactId}-${project.version}/distro/configs/analytics/</outputDirectory>
+              <includeArtifactIds>${analyticQueriesArtifactId}</includeArtifactIds>
             </configuration>
           </execution>
         </executions>
@@ -135,28 +153,6 @@
           </execution>
 
         </executions>
-      </plugin>
-
-      <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-dependency-plugin</artifactId>
-      <version>2.8</version>
-      <executions>
-      <!-- Copy Ozone Analytics queries -->
-      <execution>
-        <id>Ozone Analytics queries</id>
-        <phase>prepare-package</phase>
-        <goals>
-          <goal>unpack-dependencies</goal>
-        </goals>
-        <configuration>
-          <excludeTransitive>true</excludeTransitive>
-          <outputDirectory>
-            ${project.build.directory}/${project.artifactId}-${project.version}/distro/analytics/</outputDirectory>
-          <includeArtifactIds>analytics-queries</includeArtifactIds>
-        </configuration>
-      </execution>
-      </executions>
       </plugin>
 
       <!-- Compile a dependency report -->
